Page MenuHome GnuPG

Can't ssh-add a key w/o a passphrase
Closed, ResolvedPublic

Description

When ssh-add'ing a key to gpg-agent and not assigning a passphrase to store the
key in gpg-agent, the operation silenty fails. The Debian bug report cllaims
this is a regression.

Note that the usual confirm-no-passphrase dialog does not show up either.

Details

External Link
https://bugs.debian.org/846175
Version
2.1.16

Revisions and Commits

Event Timeline

werner set Version to 2.1.16.
werner set External Link to 846175@bugs.debian.org.
werner added a subscriber: werner.

Any thoughts or progress on this?

dkg changed External Link from 846175@bugs.debian.org to https://bugs.debian.org/846175.Feb 5 2017, 9:18 AM

I can reproduce this. Our test indeed feeds a passphrase to the agent.

werner raised the priority of this task from Normal to High.Jun 23 2017, 5:14 PM

Well, can you then please fix it?